--- a/reflections/pages/oneness-duality/index.html
+++ b/reflections/pages/oneness-duality/index.html
@@ -6,162 +6,112 @@
 <title>Oneness & Duality — Ninox Antolihao</title>
 <link rel="icon" href="/reflections/assets/favicon.ico">
 <style>
-body {
-  font-family: 'Georgia', 'Times New Roman', serif;
-  background: #faf7f3;
-  color: #3a2d26;
-  margin: 0;
-  padding: 60px 12%;
-  line-height: 1.75;
-  font-size: 1.05rem;
+body{
+  font-family:'Georgia',serif;
+  background:#fffdf9;
+  color:#3b2b26;
+  margin:0;
+  line-height:1.8;
+  padding:40px 10%;
 }
-header {
-  text-align: center;
-  margin-bottom: 50px;
-  position: relative;
+header{text-align:center;margin-bottom:40px;}
+header h1{font-size:2.2rem;margin-bottom:8px;}
+header h2{font-size:1.2rem;font-weight:normal;color:#7b5f54;margin:4px 0;}
+header p{margin:2px 0;color:#9c7e74;}
+h3{margin-top:40px;text-align:center;border-top:1px solid #e6d2b5;
+    padding-top:20px;color:#5a392e;font-weight:bold;}
+p{text-align:justify;margin:14px 0;font-size:1.05rem;}
+blockquote{
+  font-style:italic;
+  color:#5f4b43;
+  border-left:4px solid #d8b88f;
+  padding-left:14px;
+  margin:20px 0;
+  background:#f8efe5;
+  border-radius:4px;
 }
-header::after {
-  content: "❖";
-  display: block;
-  color: #bca58a;
-  margin: 20px auto 0;
-  font-size: 1.5rem;
+.center{text-align:center;margin:28px 0;line-height:1.8;}
+.divider{text-align:center;color:#c9a874;margin:26px 0;font-size:1.1rem;}
+footer{
+  text-align:center;
+  margin-top:60px;
+  font-size:0.9rem;
+  color:#a38b7b;
+  border-top:1px solid #e0d4c6;
+  padding-top:20px;
 }
-header h1 {
-  font-size: 2.5rem;
-  margin: 0;
-  color: #2e1f18;
-  letter-spacing: 0.5px;
-}
-header h2 {
-  font-weight: normal;
-  color: #7a5f54;
-  font-size: 1.2rem;
-  margin: 6px 0 14px 0;
-}
-header p {
-  color: #9d8376;
-  font-size: 0.95rem;
-  margin: 4px 0;
-}
-h3 {
-  margin-top: 60px;
-  font-size: 1.4rem;
-  color: #4a2f24;
-  border-top: 1px solid #dec9b3;
-  padding-top: 20px;
-  text-transform: capitalize;
-}
-h4 {
-  margin-top: 28px;
-  color: #7b4c3d;
-  font-style: italic;
-}
-p {
-  margin: 14px 0;
-  text-align: justify;
-}
-blockquote {
-  border-left: 4px solid #d8b88f;
-  padding-left: 16px;
-  margin: 20px 0;
-  font-style: italic;
-  color: #5a463e;
-  background: #f5efe7;
-  border-radius: 4px;
-}
-ul, ol {
-  margin-left: 30px;
-  color: #3a2f28;
-}
-.center {
-  text-align: center;
-  margin: 28px 0;
-  line-height: 1.8;
-}
-hr {
-  border: 0;
-  border-top: 1px solid #d6c1ad;
-  margin: 50px 0;
-}
-footer {
-  margin-top: 60px;
-  border-top: 1px solid #e0d4c6;
-  padding-top: 20px;
-  text-align: center;
-  color: #8e7a6d;
-  font-size: 0.9rem;
-}
-footer::before {
-  content: "— ❖ —";
-  display: block;
-  color: #bda58b;
-  margin-bottom: 16px;
-}
-section {
-  background: #fffdf9;
-  padding: 40px 50px;
-  border: 1px solid #e8dccf;
-  border-radius: 10px;
-  box-shadow: 0 8px 24px rgba(0,0,0,0.05);
-}
-@media (max-width: 768px) {
-  body { padding: 30px 6%; font-size: 1rem; }
-  section { padding: 30px 24px; }
-  header h1 { font-size: 2rem; }
+@media(max-width:720px){
+  body{padding:28px 6%;}
+  header h1{font-size:1.8rem;}
 }
 </style>
 </head>
 <body>
 <header>
   <h1>Oneness & Duality</h1>
-  <h2>The Reflection of the Eternal Balance</h2>
+  <h2>The Space Where Duality Acts</h2>
   <p>by Ninox Antolihao</p>
   <p>Stone Grill Press · Leyte, Philippines · First Edition — 2025</p>
 </header>
+
 <section>
-  <h3>Prologue</h3>
-  <p>All existence is born from the dance of opposites — light and shadow, silence and sound, motion and stillness.
-  To see only one is to see half of truth; to embrace both is to awaken the whole. This reflection explores the paradox
-  that Oneness and Duality are not enemies, but mirrors — each revealing the other’s face.</p>
-  <blockquote>“The universe is not divided by its contrasts, but united through its rhythm.” — Ninox Antolihao</blockquote>
-  <h3>The Mirror of Being</h3>
-  <p>Within every atom lies both particle and wave — a symbol of the same unity that defines consciousness.
-  Duality gives shape to experience, yet Oneness gives it meaning. Without the tension of contrast,
-  awareness cannot know itself. Without separation, there can be no return to union.</p>
-  <h4>Opposites as the Instruments of Creation</h4>
-  <ul>
-    <li>Light cannot be seen without darkness.</li>
-    <li>Joy has no meaning without sorrow.</li>
-    <li>Faith is strengthened through doubt.</li>
-  </ul>
-  <p>It is in this interplay that the soul evolves — not by rejecting one side, but by harmonizing both.
-  The divine balance is not found by escaping the world, but by recognizing the sacred pattern within it.</p>
-  <h3>The Journey Through Contrast</h3>
-  <p>Each moment of pain refines the essence of love; each confusion clarifies wisdom. Like the ebb and flow of tides,
-  our emotions and experiences are not random, but cyclic expressions of an infinite intelligence unfolding through time.</p>
-  <blockquote>“To master the self is not to silence the storm, but to become its calm center.”</blockquote>
-  <div class="center">
-    <p>Light and shadow share the same source.</p>
-    <p>The flame exists because the night allows it.</p>
-    <p>Within every breath — the rhythm of creation continues.</p>
-  </div>
-  <h3>The Reconciliation</h3>
-  <p>When the seeker realizes that opposites are only two sides of the same truth, the illusion of separation dissolves.
-  Heaven and Earth, mind and body, good and evil — all become instruments of the same cosmic symphony.
-  The One manifests through the many, and the many return to the One.</p>
-  <p>Thus, Oneness is not the absence of Duality, but its perfection.
-  To live consciously is to see the divine in both extremes and to understand that love itself is the bridge between them.</p>
-  <hr>
-  <h3>About the Author</h3>
-  <p><strong>Ninox Antolihao</strong> is a Filipino philosopher and author who writes about the intersection of spirit, science, and self-awareness.
-  His reflections are written not to instruct but to awaken — gentle invitations to remember the unity behind all opposites.
-  As founder of Stone Grill Press in Leyte, he continues to share insights that nourish both the soul and the senses.</p>
-  <blockquote>“To understand the One, learn to see through the Two.” — Ninox Antolihao</blockquote>
+<h3>WHY ONENESS IS NOT SEPARATE FROM DUALITY</h3>
+<p>Oneness and Duality are not two opposing truths but one continuous reality seen from two lenses. Duality is the movement of the One—it is the way the Infinite experiences itself as form. Without contrast, nothing can be known; without Oneness, contrast has no ground to exist.</p>
+
+<p>Just as the ocean expresses itself through waves, Oneness expresses itself through Duality. The wave appears separate, but its essence is water. Likewise, all experiences—light and dark, life and death, joy and pain—are not enemies but rhythmic pulsations of one universal essence.</p>
+
+<div class="divider">— ❖ —</div>
+
+<h3>DUALITY AS THE FUNCTIONAL TOOL</h3>
+<p>Duality functions as the mechanism through which consciousness explores itself. It is not the enemy of unity, but the servant of realization. Through the perception of opposites, awareness sharpens its sense of being.</p>
+<p><strong>Light</strong> can only be known through the existence of <strong>darkness</strong>. <strong>Truth</strong> reveals itself against the background of <strong>falsehood</strong>. This dance of opposites allows the One to become aware of itself as both observer and observed.</p>
+
+<blockquote>“The universe learns itself by dividing itself in two.” — Ninox Antolihao</blockquote>
+
+<div class="divider">— ❖ —</div>
+
+<h3>ONENESS AS THE GROUND OF BEING</h3>
+<p>Behind every motion lies stillness. Behind every form, the formless. Oneness is that silent field from which all dualities arise and into which all dissolve. It is the space in which Duality acts, just as silence is the space in which sound appears.</p>
+<p>To realize Oneness is not to destroy Duality, but to see it as an expression of the same eternal substance. The opposites do not vanish; they are understood as complementary halves of one truth.</p>
+<p>The apparent division between Oneness (Absolute Reality) and Duality (Relative Experience) is itself a misunderstanding created by the dualistic mind. The two concepts are not separate entities locked in competition, but rather two ways of describing the same single reality. Oneness is the context; Duality is the content. Duality is the expression of Oneness, not its opposite.</p>
+<p>The entire philosophical journey from separation to unity pivots on the realization that Oneness and Duality are not mutually exclusive. Instead, Duality is the functional form that Oneness assumes to manifest a knowable, operable universe.</p>
+<div class="divider">— ❖ —</div>
+
+<h3>THE ILLUSION OF THE “I”</h3>
+<p>The mind, through conditioning, identifies with one half of Duality—preferring light over dark, good over evil, life over death. This selective perception creates the illusion of a separate “I.” Yet when awareness observes even this preference, it begins to awaken from illusion.</p>
+<p>The ego is not destroyed through denial but through understanding. It is a temporary structure that allows consciousness to play within form. Once its role is seen, its power to imprison fades.</p>
+
+<div class="divider">— ❖ —</div>
+
+<h3>THE SEAMLESS REALITY OF ONENESS</h3>
+<p>When all opposites are understood as necessary to the Whole, perception shifts from resistance to reverence. Life ceases to be a problem to solve and becomes a mystery to experience.</p>
+<p><em>Duality is not the absence of Oneness; it is its reflection through experience.</em> The two are one continuum—movement and stillness, action and awareness, time and eternity—all within the same divine field.</p>
+
+<div class="divider">— ❖ —</div>
+
+<h3>THE UNIVERSAL SELF</h3>
+<p>To awaken is to remember: there is only one Self appearing as all beings. The same light that animates you animates the stars, the trees, and every beating heart. Oneness is not found by seeking; it is revealed by the quiet seeing of what already is.</p>
+
+<blockquote>“You are not a drop in the ocean; you are the ocean looking at itself through a drop.” — Ninox Antolihao</blockquote>
+
+<div class="divider">— ❖ —</div>
+
+<h3>REALIZATION</h3>
+<p>True realization is not escape from Duality but harmony within it. It is the calm acceptance that joy and sorrow, gain and loss, birth and death are all movements within the same stillness.</p>
+<p><strong>Oneness is the space where Duality acts.</strong> To live consciously is to let both exist—action within peace, form within formlessness, self within Self.</p>
+
+<div class="divider">— ❖ —</div>
+
+<h3>ABOUT THE AUTHOR</h3>
+<p><strong>Ninox Antolihao</strong> is a Filipino thinker and writer exploring the meeting point of spirituality, science, and self-awareness. His reflections seek to awaken understanding rather than belief, reminding readers that truth is not owned but realized.</p>
+<p>Through Stone Grill Press, he shares reflections that weave philosophy, psychology, and lived experience into one voice—gentle yet clear—urging humanity to rediscover the unity beneath apparent separation.</p>
+
+<blockquote>“Awareness is the bridge between Oneness and Duality.” — Ninox Antolihao</blockquote>
+
 </section>
+
 <footer>
-  Stone Grill Press · Leyte, Philippines · © 2025 Ninox Antolihao<br>
-  First Edition — 2025
+  <p>Stone Grill Press · Leyte, Philippines · © 2025 Ninox Antolihao<br>First Edition — 2025</p>
 </footer>
 </body>
 </html>
