--- a/reflections/index.html
+++ b/reflections/index.html
@@ -122,7 +122,7 @@
       <!-- ==== Oneness and Duality ==== -->
       <article class="card">
         <div class="left">
-          <a class="book-link" href="/reflections/pages/oneness-duality/read.html" target="_blank" rel="noopener">
+          <a class="book-link" href="/reflections/pages/oneness-duality/index.html" target="_blank" rel="noopener">
             <img class="book-cover"
                  src="/reflections/pages/oneness-duality/oneness-duality.png"
                  alt="oneness duality cover"
@@ -134,7 +134,7 @@
               From Oneness to Duality</a></h3>
           <p>through philosophy, theology, and psychology, converging a profound idea that duality—the perceived separation between the self and the world</p>
           <div class="meta">First Edition 2025 •
-            <a class="title-link" href="/reflections/pages/oneness-duality/oneness-duality.pdf">PDF</a>
+            <a class="title-link" href="/reflections/pages/oneness-dualityindex.html">PDF</a>
           </div>
           <div class="cover-actions">
             <a class="btn" href="/reflections/pages/oneness-duality/read.html" target="_blank" rel="noopener">Read</a>
