--- a/reflections/pages/oneness-duality/index.html
+++ b/reflections/pages/oneness-duality/index.html
@@ -80,6 +80,14 @@ footer{
 <h3>THE ILLUSION OF THE “I”</h3>
 <p>The mind, through conditioning, identifies with one half of Duality—preferring light over dark, good over evil, life over death. This selective perception creates the illusion of a separate “I.” Yet when awareness observes even this preference, it begins to awaken from illusion.</p>
 <p>The ego is not destroyed through denial but through understanding. It is a temporary structure that allows consciousness to play within form. Once its role is seen, its power to imprison fades.</p>
+<h3>Duality as the Functional Tool</h3>
+<p>As established, the dualistic framework—the distinction between "I" and "Not-I," hot and cold, up and down—is the necessary cognitive tool our brains use for survival. It is the operating system that translates the infinite, non-conceptual field of Oneness into specific, actionable data. Without this tool, the organism could not distinguish a threat from a resource, or itself from its environment. Duality is the language of action, essential for navigating the relative world</p>
+<h3>Oneness as the Ground of Being</h3>
+<p>However, this functional tool does not negate the underlying truth. Oneness is the undifferentiated field of consciousness—the boundless, eternal, and unchanging reality that makes the existence of all opposites possible. It is the Absolute reality. Just as a movie screen (Oneness) allows all different images (Duality) to appear without being affected or damaged by them, Oneness remains the silent, unified background to all the changing, dualistic phenomena.</p>
+
+<p>The two are unified in a non-dual relationship:</p>
+<p>The "problem" of duality only arises when the functional part (the dualistic "I" or ego) forgets that it is fundamentally rooted in the whole. When this happens, the tool is mistaken for the ultimate truth, and the results are conflict, selfishness, and suffering. Thus, the pursuit of Oneness is not about escaping duality, but about realizing that one was never separate from it in the first place.</p>
+
 
 <div class="divider">— ❖ —</div>
 
