--- a/reflections/pages/oneness-duality/read.html
+++ b/reflections/pages/oneness-duality/read.html
@@ -1,208 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Why Oneness Is Not Separate from Duality — Ninox Antolihao</title>
-  <meta name="description" content="A clean, mobile-friendly reader for the Oneness/Duality reflection by Ninox Antolihao.">
-  <link rel="icon" href="/reflections/assets/favicon.ico">
-
-  <meta property="og:title" content="Why Oneness Is Not Separate from Duality — Ninox Antolihao">
-  <meta property="og:description" content="Read online or download the PDF.">
-  <meta property="og:image" content="./oneness-duality.png">
-
-  <style>
-    /* ===== Theme ===== */
-    :root{
-      --bg:#1f1815; --paper:#2a211e; --ink:#f3e6dd; --muted:#c9b0a4; --accent:#ff6b3d;
-      --ink-weak:#ecd7cb; --line:#3a2e2a;
-    }
-    *{box-sizing:border-box}
-    html,body{margin:0;padding:0;background:var(--bg);color:var(--ink);font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";}
-    a{color:inherit;text-decoration:none}
-    img{max-width:100%;display:block}
-
-    /* ===== Layout ===== */
-    .wrap{max-width:1100px;margin:0 auto;padding:20px}
-    header{padding:10px 0 20px}
-
-    .card{
-      background:var(--paper);
-      border:1px solid var(--line);
-      border-radius:14px;
-      padding:18px;
-      display:grid;
-      grid-template-columns: 280px 1fr;
-      gap:18px;
-      align-items:start;
-      box-shadow: 0 10px 30px rgba(0,0,0,.25);
-    }
-    .cover{
-      aspect-ratio: 3/4;
-      width:100%;
-      border-radius:10px;
-      overflow:hidden;
-      background:#140f0d;
-      border:1px solid var(--line);
-    }
-    .cover a{display:block;height:100%}
-    .cover img{
-      width:100%; height:100%; object-fit:cover;
-      transition: transform .18s ease;
-    }
-    .cover:hover img{ transform: scale(1.02); }
-
-    .meta h1{
-      margin:0 0 8px 0; line-height:1.15;
-      font-weight:800; font-size: clamp(18px, 3vw, 28px);
-      letter-spacing:.2px;
-    }
-    .meta .byline{
-      margin:0 0 12px 0; color:var(--muted); font-size:14px;
-    }
-    .meta .desc{
-      margin:0 0 14px 0; color:var(--ink-weak); font-size:15px; line-height:1.55;
-    }
-
-    /* Buttons row */
-    .actions{
-      display:flex; flex-wrap:wrap; gap:10px;
-    }
-    .btn{
-      display:inline-flex; align-items:center; justify-content:center;
-      padding:10px 14px; font-weight:700; font-size:14px; line-height:1;
-      background:var(--accent); color:#1b0e09; border:none; border-radius:10px;
-      cursor:pointer; box-shadow:0 4px 16px rgba(255,107,61,.25); transition: transform .12s ease, opacity .12s ease;
-    }
-    .btn.secondary{
-      background:transparent; color:var(--ink);
-      border:1px solid var(--line);
-      box-shadow:none;
-    }
-    .btn:active{ transform: translateY(1px); }
-    .btn.small{ font-size:13px; padding:9px 12px; }
-
-    /* Details (kept intact but subtle) */
-    .details{
-      margin-top:12px; color:var(--muted); font-size:13px;
-      border-top:1px dashed var(--line); padding-top:10px;
-    }
-
-    /* Viewer */
-    #viewer{
-      margin-top:18px;
-      background:var(--paper);
-      border:1px solid var(--line);
-      border-radius:12px;
-      overflow:hidden;
-    }
-    .viewer-head{
-      display:flex; align-items:center; justify-content:space-between;
-      padding:10px 12px; border-bottom:1px solid var(--line);
-      color:var(--muted); font-size:13px;
-    }
-    .frame{
-      width:100%;
-      height: min(84vh, 1200px);
-      border:0;
-      background:#0f0b0a;
-    }
-    .note{
-      margin:10px 0 0 0; color:var(--muted); font-size:12px; text-align:right;
-    }
-
-    /* Footer */
-    footer{
-      color:var(--muted); font-size:12px; text-align:center; padding:24px 0 10px;
-    }
-
-    /* ===== Responsive ===== */
-    @media (max-width:900px){
-      .card{ grid-template-columns: 220px 1fr; }
-    }
-    @media (max-width:720px){
-      .card{ grid-template-columns: 1fr; }
-      .cover{ max-width: 360px; margin:0 auto; }
-      .actions{ gap:8px; }
-      .btn{ font-size:13px; padding:10px 12px; }
-      .meta h1{ font-size: clamp(18px, 5vw, 24px); }
-    }
-  </style>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Oneness & Duality -- Ninox Antolihao</title>
+<link rel="icon" href="/reflections/assets/favicon.ico">
+<style>
+body{
+  font-family:'Georgia',serif;
+  background:#fffdf9;
+  color:#3b2b26;
+  margin:0;
+  line-height:1.8;
+  padding:40px 10%;
+}
+header{text-align:center;margin-bottom:40px;}
+header h1{font-size:2.2rem;margin-bottom:8px;}
+header h2{font-size:1.2rem;font-weight:normal;color:#7b5f54;margin:4px 0;}
+header p{margin:2px 0;color:#9c7e74;}
+h3{margin-top:40px;text-align:center;border-top:1px solid #e6d2b5;
+    padding-top:20px;color:#5a392e;font-weight:bold;}
+p{text-align:justify;margin:14px 0;font-size:1.05rem;}
+blockquote{
+  font-style:italic;
+  color:#5f4b43;
+  border-left:4px solid #d8b88f;
+  padding-left:14px;
+  margin:20px 0;
+  background:#f8efe5;
+  border-radius:4px;
+}
+.center{text-align:center;margin:28px 0;line-height:1.8;}
+.divider{text-align:center;color:#c9a874;margin:26px 0;font-size:1.1rem;}
+footer{
+  text-align:center;
+  margin-top:60px;
+  font-size:0.9rem;
+  color:#a38b7b;
+  border-top:1px solid #e0d4c6;
+  padding-top:20px;
+}
+@media(max-width:720px){
+  body{padding:28px 6%;}
+  header h1{font-size:1.8rem;}
+}
+</style>
 </head>
 <body>
-  <div class="wrap">
-    <header aria-label="Page header">
-      <!-- you can place your Stone Grill logo here if you want -->
-    </header>
+<header>
+  <h1>Oneness & Duality</h1>
+  <h2>The Space Where Duality Acts</h2>
+  <p>by Ninox Antolihao</p>
+  <p>Stone Grill Press · Leyte, Philippines · First Edition -- 2025</p>
+</header>
 
-    <section class="card">
-      <!-- LEFT: Cover (clickable) -->
-      <div class="cover">
-        <a href="#read" id="coverLink" aria-label="Open the reader">
-          <img src="./cover.jpg" alt="Cover — Why Oneness Is Not Separate from Duality"
-               onerror="this.src='/reflections/assets/placeholder-cover.png'">
-        </a>
-      </div>
+<section>
+<h3>A Journey from Duality to Oneness</h3>
+<p>Today's conversation charted a fascinating course through philosophy, theology, and psychology, ultimately converging on a single, profound idea: that duality--the perceived separation between the self and the world--is a tool of consciousness, and its misidentification as ultimate reality is the root of human suffering</p>
+<p>The journey began by questioning the provability of religious claims. We concluded that the skeptical thesis, "man created God in his own image," is the most provable explanation for theological contradictions, as it accounts for the observable fact that religious rules and concepts are merely human, cultural, and historical projections. This led us directly to the concept of duality.</p>
+<p>The concept of Oneness is not a religious doctrine or a philosophical abstraction; it is, in the view of many mystical traditions and modern physics, the fundamental, seamless reality underlying the universe. It is the understanding that all apparent diversity--every star, every human, every thought--is a temporary manifestation of a single, unified field of consciousness and energy. This realization challenges the core mechanism of human survival: the dualistic ego.</p>
+<p>The Illusion of the "I".</p>
+<p>The human mind, wired for survival, operates by creating and maintaining boundaries. It defines the world through a constant dualistic calculus: "I" vs. "Other," "Good" vs. "Bad," "Safe" vs. "Threat." This functional separation, necessary for navigating the physical world, solidifies into the belief that the "I"--the ego--is an isolated entity.</p>
+<p>This belief in separation is the root of the world's greatest problems. It creates the logic for selfishness, as the needs of the "I" are prioritized over the "Other." It fuels conflict, as my group's welfare is deemed separate from yours. It makes dogma contradictory, as a separate, personal God is imagined with human-like, dualistic flaws. In short, the ego, the dualistic agent of survival, mistakes its tool for the ultimate truth, trapping consciousness in a web of internal and external conflict.</p>
 
-      <!-- RIGHT: Title, description, buttons -->
-      <div class="meta">
-        <h1>
-          <a href="#read" id="titleLink" aria-label="Open the reader">
-            Why Oneness Is Not Separate from Duality
-          </a>
-        </h1>
-        <p class="byline">By <strong>Ninox Antolihao</strong> • Stone Grill Press • First Edition — 2025</p>
+<p>The core of the problem, we established, lies in the dualistic structure of the human mind. Our brains, designed primarily as survival engines, create a necessary division: "I" versus "Not-I" (the external world). This separation, which is crucial for navigation and survival, is the origin of the ego.</p>
+<p>To resolve these contradictions, we embraced the non-dual perspective, realizing that duality is not reality; it is merely a tool.</p>
+<p>Duality functions as the mechanism through which consciousness explores itself. It is not the enemy of unity, but the servant of realization. Through the perception of opposites, awareness sharpens its sense of being.</p>
+<p><strong>Light</strong> can only be known through the existence of <strong>darkness</strong>. <strong>Truth</strong> reveals itself against the background of <strong>falsehood</strong>. This dance of opposites allows the One to become aware of itself as both observer and observed.</p>
 
-        <p class="desc">
-          Oneness is the context; duality is the content. Duality is not the enemy of Oneness
-          but its functional expression—our mind’s necessary tool for navigating the relative world
-          while rooted in the Absolute. (Reader for your uploaded PDF.)
-        </p>
+<blockquote>"The universe learns itself by dividing itself in two." -- Ninox Antolihao</blockquote>
 
-        <div class="actions" role="group" aria-label="Primary actions">
-          <a class="btn" href="#read">Read Online</a>
-          <a class="btn secondary" href="./oneness-duality.pdf" download>Download PDF</a>
-        </div>
+<div class="divider">-- ❖ --</div>
 
-        <div class="details">
-          <div>Format: PDF • Language: English</div>
-          <div>Publisher: Stone Grill Press • © 2025 Ninox Antolihao</div>
-        </div>
-      </div>
-    </section>
+<h4>Oneness isn't the opposite of Duality</h4>
+<p>Oneness and Duality are not two opposing truths but one continuous reality seen from two lenses. Duality is the movement of the One--it is the way the Infinite experiences itself as form. Without contrast, nothing can be known; without Oneness, contrast has no ground to exist.</p>
 
-    <!-- VIEWER -->
-    <section id="read" aria-label="Reader">
-      <div id="viewer">
-        <div class="viewer-head">
-          <div>PDF Viewer</div>
-          <div>
-            <a class="btn small secondary" href="./oneness-duality.pdf" target="_blank" rel="noopener">Open in new tab</a>
-          </div>
-        </div>
-        <!-- The #view and #toolbar params help most browsers provide a nicer initial view -->
-        <iframe class="frame" src="./oneness-duality.pdf#view=FitH&pagemode=none" title="Oneness / Duality PDF Reader"></iframe>
-      </div>
-      <p class="note">
-        Content provided from your uploaded file.  [oai_citation:1‡oneness-duality.pdf](sediment://file_000000008e68620786b0a00a2c38bbbe)
-      </p>
-    </section>
+<p>Just as the ocean expresses itself through waves, Oneness expresses itself through Duality. The wave appears separate, but its essence is water. Likewise, all experiences--light and dark, life and death, joy and pain--are not enemies but rhythmic pulsations of one universal essence.</p>
+<p>Oneness is the ultimate reality--the single, undivided, supra-logical Consciousness from which all experience emerges. It is the hardware upon which the dualistic operating system runs.
+: All the world's problems--from ethical failures to mental distress--are not inherent to existence but are a consequence of a lack of balance, where the dualistic self-focus of the "I" overrides the unifying truth of Oneness.</p>
 
-    <footer>
-      — ❖ —<br>
-      Stone Grill • “Enjoyable and Relaxing”
-    </footer>
-  </div>
+<div class="divider">-- ❖ --</div>
 
-  <script>
-    // Make cover and title open the reader smoothly
-    function openReader(e){
-      e.preventDefault();
-      const el = document.getElementById('read');
-      el?.scrollIntoView({behavior:'smooth', block:'start'});
-    }
-    document.getElementById('coverLink')?.addEventListener('click', openReader);
-    document.getElementById('titleLink')?.addEventListener('click', openReader);
-  </script>
+
+
+<h3>ONENESS AS THE GROUND OF BEING</h3>
+<p>Behind every motion lies stillness. Behind every form, the formless. Oneness is that silent field from which all dualities arise and into which all dissolve. It is the space in which Duality acts, just as silence is the space in which sound appears.</p>
+<p>To realize Oneness is not to destroy Duality, but to see it as an expression of the same eternal substance. The opposites do not vanish; they are understood as complementary halves of one truth.</p>
+<p>The most profound realization of the conversation was the distinction between the Relative Self and the Absolute Self:</p>
+<p>The "Who We Are" is the dualistic identity--the personality, the ego, the role, the moral code--which is temporary and changeable. This is where most religions and human effort are focused.</p>
+<p>The "What We Are" is the Absolute Self--the unchanging, perfect, non-dual Awareness that is the substance of the universe. This is what we ultimately cannot change.</p>
+<p>The goal of wisdom, therefore, is not to destroy the necessary tool of duality, but to simply remember the truth of Oneness while living in the world of separation. We must use the dualistic "I" for functional survival, but we must govern it with the awareness that "I am all that is."</p>
+<p>Reflection:</p>
+<p>The conversation on duality is a profound call for a shift in perspective. To realize that the foundational structure of our world--the distinction between "me" and "not-me"--is merely an evolutionary tool for survival is to gain access to a deeper, ethical truth.
+</p>
+<p>The insight gained is not that we should abandon duality; that would be impossible, as we need the separate "I" to navigate, eat, and function. The realization is that we must never mistake the map for the territory. Duality is the map of relative functionality; Oneness is the territory of absolute reality.</p>
+<p>Our task in life, therefore, is to maintain the necessary dualistic function (to act, decide, and survive) while holding the non-dual awareness (that the other person is me). This shift moves life from a competitive battle to a harmonious flow. It dismantles the logic of selfishness and transforms ethical behavior from a duty driven by fear into a spontaneous, logical act of self-love applied to the Universal Self. The ultimate wisdom lies in using the "I" to serve the "Everything."</p>
+
+<div class="divider">-- ❖ --</div>
+
+<h3>The " I " (ego)</h3>
+<p>The mind, through conditioning, identifies with one half of Duality--preferring light over dark, good over evil, life over death. This selective perception creates the illusion of a separate "I." Yet when awareness observes even this preference, it begins to awaken from illusion.</p>
+<p>The ego is not destroyed through denial but through understanding. It is a temporary structure that allows consciousness to play within form. Once its role is seen, its power to imprison fades.</p>
+
+<div class="divider">-- ❖ --</div>
+
+<h3>THE SEAMLESS REALITY OF ONENESS</h3>
+<p>When all opposites are understood as necessary to the Whole, perception shifts from resistance to reverence. Life ceases to be a problem to solve and becomes a mystery to experience.</p>
+<p><em>Duality is not the absence of Oneness; it is its reflection through experience.</em> The two are one continuum--movement and stillness, action and awareness, time and eternity--all within the same divine field.</p>
+
+<div class="divider">-- ❖ --</div>
+
+<h3>REALIZATION</h3>
+<p>True realization is not escape from Duality but harmony within it. It is the calm acceptance that joy and sorrow, gain and loss, birth and death are all movements within the same stillness.</p>
+<p><strong>Oneness is the space where Duality acts.</strong> To live consciously is to let both exist--action within peace, form within formlessness, self within Self.</p>
+<p>To awaken is to remember: there is only one Self appearing as all beings. The same light that animates you animates the stars, the trees, and every beating heart. Oneness is not found by seeking; it is revealed by the quiet seeing of what already is.</p>
+
+<blockquote>"You are not a drop in the ocean; you are the ocean looking at itself through a drop." -- Ninox Antolihao</blockquote>
+
+
+<div class="divider">-- ❖ --</div>
+
+<h3>ABOUT THE AUTHOR</h3>
+<p><strong>Ninox Antolihao</strong> is a Filipino thinker and writer exploring the meeting point of spirituality, science, and self-awareness. His reflections seek to awaken understanding rather than belief, reminding readers that truth is not owned but realized.</p>
+<p>Through Stone Grill Press, he shares reflections that weave philosophy, psychology, and lived experience into one voice--gentle yet clear--urging humanity to rediscover the unity beneath apparent separation.</p>
+
+<blockquote>"Awareness is the bridge between Oneness and Duality." -- Ninox Antolihao</blockquote>
+
+</section>
+
+<footer>
+  <p>Stone Grill Press · Leyte, Philippines · © 2025 Ninox Antolihao<br>First Edition -- 2025</p>
+</footer>
 </body>
 </html>
